--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     },
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
-    ]
+    ],
+    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
@@ -39,12 +40,15 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.19.1",
+    "@testing-library/jest-native": "^5.0.0",
+    "@testing-library/react-native": "^11.3.0",
     "eslint": "^8.23.1",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-native": "^4.0.0",
     "jest": "^27.5.1",
-    "jest-expo": "^46.0.1"
+    "jest-expo": "^46.0.1",
+    "react-test-renderer": "^18.0.0"
   },
   "private": true
 }
