--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-paper": "^5.0.0-rc.8",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.4.1",
+    "use-debounce": "^8.0.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
